# Prototype-Horde

./: .gitignore  CMakeLists.txt  README.md  build-rg35xx.bat  build-windows.bat  rg35xx-toolchain.cmake
assets/: README.md
include/: common.h  config.h  defs.h  game.h  structs.h
rg35xx-sysroot/usr/include/GLES2/: gl2.h  gl2ext.h
rg35xx-sysroot/usr/include/GLES3/: gl3.h
rg35xx-sysroot/usr/lib/: libSDL2-2.0.so.0.2800.5  libSDL_image-1.2.so.0
src/: game.c  main.c
